# olmoearth_projects

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements-extra.txt  requirements-olmoearth_pretrain.txt  requirements.txt
.github/workflows/: build-test.yml  forest_loss_driver_prediction.yaml  lint.yml
dataset_floods/: config.json  model.yaml  step_0_save_sen1floods_data.py  step_11.1_check_prediction_performance.py  step_11.2_plot_prediction.py  step_11_run_inference.md  step_1_get_windows_from_labels.py  step_2_add_windows_train.py  step_3_4_5_prepare_train_data.md  step_6.1_qa_plot_materialized_data.py  step_6_train_val_split.py  step_7.1_plot_training.py  step_7_finetune.md  step_8_add_windows_test.py  step_9_10_prepare_test_data.md
docs/: awf.md  ecosystem_type_mapping.md  forest_loss_driver.md  internal.md  lfmc.md  mangrove.md  nandi.md  oil_spills.md
docs/Cookbooks/: OE_FT_oer.md  OE_FT_rslp.md  OE_FTstudio.md
olmoearth_projects/: __init__.py  main.py
olmoearth_projects/kenya_lulc_croptype/: README.md  __init__.py  create_training_points.py
olmoearth_projects/olmoearth_pretrain/: model.py  norm.py
olmoearth_projects/olmoearth_run/: README.md  olmoearth_run.py
olmoearth_projects/train/: __init__.py  segmentation_pooling_decoder.py
olmoearth_projects/utils/: __init__.py  fs.py
olmoearth_run_data/awf/: dataset.json  model.yaml  olmoearth_run.yaml  prediction_request_geometry.geojson
olmoearth_run_data/ecosystem_type_mapping/: dataset.json  model.yaml
olmoearth_run_data/fields_of_the_world/: README.md  model.yaml  olmoearth_run.yaml
olmoearth_run_data/forest_loss_driver/: dataset.json  deploy.Dockerfile  deploy.yaml  model.yaml  olmoearth_run.yaml  prediction_request_geometry.geojson
olmoearth_run_data/kenya_lulc_croptype/: README.md  config.json  dataset.json  model_cropland.yaml  model_maize.yaml  olmoearth_run_maize.yaml  rslp_finetuning_cropland.yaml  rslp_finetuning_cropland_attndrop.yaml  rslp_finetuning_cropland_bigger_windows.yaml  rslp_finetuning_cropland_ps1.yaml  rslp_finetuning_maize.yaml
olmoearth_run_data/landslides/: .gitignore  README.md
olmoearth_run_data/lfmc/: dataset.json  model.yaml
olmoearth_run_data/mangrove/: dataset.json  model.yaml  olmoearth_run.yaml
olmoearth_run_data/mozambique_lulc/: README.md  config.json  dataset.json  dataset_element84.json  model.yaml  rslp_finetuning.yaml  rslp_finetuning_attnpool.yaml  rslp_finetuning_croptype.yaml  rslp_finetuning_croptype_attnpool.yaml  rslp_finetuning_croptype_in_season_novapr.yaml  (+9 more)
scripts/: polygons_to_annotation_features.py
tests/: conftest.py
tools/: authenticate_code_artifact.sh
(+94 files in other folders)
